--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@ layout: default
   include introduction.html
     theme="success"
     title="About Me"
-    subtitle="Some summary about me."
+    subtitle="Some info about me and my skills."
 %}
 
 {% include job-timeline.html %}
