--- a/resume/en.html
+++ b/resume/en.html
@@ -124,7 +124,7 @@ title: "Resume"
 
       <small class="pl-1">
         <strong>From:</strong> {{ job.start_date }} -
-        <strong>To:</strong> {{ job.end_date }}.
+        <strong>To:</strong> {{ job.end_date }}
       </small>
     </div>
     {% endfor %}
