--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   include introduction.html
     theme="info"
     title="Hi, I'm João Marcus Fernandes"
-    subtitle="I'm Full-stack web developer. Graduated at Analysis and development of systems on Faeterj-RIO."
+    subtitle="I'm Full-stack web developer since 2015, mostly with Javascript, Ruby, and Python,<br />but I love to learn new techs, and learn new things along the way.<br /> I love to write, and teach, you can check my posts <a href='/posts'>here</a>, and if you need a tech mentor reach me out <a href='/mentorship'>here</a>.<br /> I'm also graduated at Analysis and development of systems on Faeterj-RIO."
 %}
 
 {% include job-timeline.html %}
