--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@ layout: default
   include introduction.html
     theme="danger"
     title="Posts Page"
-    subtitle="Some of posts and presentations that I have written."
+    subtitle="Hey you! I've written and gave some presentations, here you can check out then."
 %}
 
 {% include expanded/posts.html %}
