--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ layout: default
   include introduction.html
     theme="warning"
     title="Projects Page"
-    subtitle="Some projects I believe is worth to be shown."
+    subtitle="Most of my projects are open source and contains some things I'm studying, here, check it out."
 %}
 
 {% include expanded/projects.html %}
