--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ layout: default
 {%
   include introduction.html
     theme="info"
-    title="Hi, I'm João Marcus Fernandes"
-    subtitle="I'm Full-stack web developer since 2015, mostly with Javascript, Ruby, and Python,<br />but I love to learn new techs, and learn new things along the way.<br /> I love to write, and teach, you can check <a href='/posts' aria-label='Link for my posts page'>my posts</a>, and if you need a <a href='/mentorship' aria-label='Link for my mentorship page'>tech mentor</a> you can contact me, I'll be glad to help you.<br /> I'm also graduated at Analysis and development of systems on Faeterj-RIO."
+    title="Hi, I'm João&nbsp;Marcus&nbsp;Fernandes"
+    subtitle="I'm Full-stack web developer since 2015, mostly with Javascript, Go, and Python,<br />but I love to learn new techs, and learn new things along the way.<br /> I love to write, and teach, you can check <a href='/posts' aria-label='Link for my posts page'>my posts</a>, and if you need a <a href='/mentorship' aria-label='Link for my mentorship page'>tech mentor</a> you can contact me, I'll be glad to help you.<br /> I'm also graduated at Analysis and development of systems on Faeterj-RIO."
+    class="computer-bg typewriter"
 %}
 
 {% include job-timeline.html %}
