Added new images

--- a/mentorship.html
+++ b/mentorship.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 
-{% include introduction.html theme="link" title="Mentorship"
+{% include introduction.html
+    theme="link"
+    title="Mentorship"
     subtitle="Hey you! I'm glad you are here with me.<br /> I work since 2015, and since them, I've worked with many people, and a bunch of them thought great thing to me, and now it's my time to give it back to the community."
+    class="has-background bg-mentorship typewriter"
 %}
 
 <section class="hero mentorship-lists-section is-dark">
