--- a/posts.html
+++ b/posts.html
@@ -7,6 +7,7 @@ layout: default
     theme="danger"
     title="Posts Page"
     subtitle="Hey you! I've written and gave some presentations, here you can check out then."
+    class="has-background bg-posts typewriter"
 %}
 
 {% include expanded/posts.html %}
