--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@ layout: default
     theme="warning"
     title="Projects Page"
     subtitle="Most of my projects are open source and contains some things I'm studying, here, check it out."
+    class="has-background bg-projects typewriter"
 %}
 
 {% include expanded/projects.html %}
