--- a/mail-me.html
+++ b/mail-me.html
@@ -17,6 +17,4 @@ layout: email
   </div>
 </footer>
 
-<script>
-    window.location.href = "mailto:{{site.email}}?subject=Hi, saw your profile at your site"
-</script>
+<script src="{{ site.baseurl }}/js/mail-me.js"></script>
