--- a/mentorship/logica-de-programaca-com-js.html
+++ b/mentorship/logica-de-programaca-com-js.html
@@ -2,91 +2,6 @@
 layout: mentorship
 ---
 
-<script>
-  function validarCodigo(codigo, linhas) {
-    var valido = true
-
-    for (var i = 0; i < linhas.length; i++) {
-      var linha = linhas[i]
-
-      valido = valido && codigo.includes(linha)
-    }
-
-    return valido
-  }
-
-  function pegarElemento(id) {
-    return document.getElementById(id)
-  }
-
-  function encontrar(elemento1, elemento2) {
-    elemento1.classList.remove("to-left")
-    elemento1.classList.add("to-right")
-    elemento2.classList.remove("to-right")
-    elemento2.classList.add("to-left")
-  }
-
-  function disfarcar(elemento1) {
-    document.querySelector("#" + elemento1.id + " figure").classList.toggle("is-mirrored")
-    document.querySelector("#" + elemento1.id + " img").src = "/images/mentorship/disfarce-01.png"
-  }
-
-  function pegarCodigo(elemento1, codigo) {
-    $codigo = document.querySelector("#" + elemento1.id + " .codigo")
-    return $codigo.innerHTML
-  }
-
-  function fantasia(elemento1, fantasia) {
-    elemento1.fantasia = fantasia;
-
-    return elemento1;
-  }
-
-  function removerDaFila(elemento) {
-    elemento.remove()
-  }
-
-  function removerDoCarnaval(elemento) {
-    console.log(elemento.id)
-
-    document.getElementById(elemento.id).remove()
-  }
-
-  function submitCode(event, targetId, $scenario, $textarea, lines) {
-    event.preventDefault();
-
-    $textarea.parentElement.classList.toggle("is-loading");
-
-    setTimeout(function () {
-      $textarea.classList.remove("is-shake-error-animated");
-      $textarea.classList.remove("is-success");
-
-      if (
-        validarCodigo($textarea.value, lines)
-      ) {
-        var newScript = document.createElement('script');
-        newScript.classList.add("target-script")
-        newScript.innerHTML = $textarea.value
-
-        var $script = document.querySelector("#" + targetId + " .target-script")
-
-        if ($script) {
-          $script.remove()
-        }
-
-        $scenario.appendChild(newScript);
-
-        $textarea.classList.add("is-success");
-      } else {
-        $textarea.classList.add("is-shake-error-animated");
-      }
-
-      $textarea.parentElement.classList.toggle("is-loading");
-    }, 1000);
-  }
-
-</script>
-
 {% include introduction.html
     theme="link"
     title="Lógica de programação com JavaScript"
@@ -166,20 +81,6 @@ layout: mentorship
       </div>
     </div>
   </form>
-
-  <script>
-    function submitExample01(event, targetId) {
-      $textarea = document.querySelector("#" + targetId + " .textarea")
-      $scenario = document.querySelector("#" + targetId + " .scenario")
-
-      submitCode(event, targetId, $scenario, $textarea, [
-        'var $girl01 = pegarElemento("example01_Girl01")',
-        'var $girl02 = pegarElemento("example01_Girl02")',
-        'encontrar($girl01, $girl02)',
-      ]);
-    }
-
-  </script>
 </section>
 
 <br />
@@ -231,19 +132,6 @@ layout: mentorship
       </div>
     </div>
   </form>
-
-  <script>
-    function submitExample02(event, targetId) {
-      $textarea = document.querySelector("#" + targetId + " .textarea")
-      $scenario = document.querySelector("#" + targetId + " .scenario")
-
-      submitCode(event, targetId, $scenario, $textarea, [
-        'var $boy = pegarElemento("example02_Boy01")',
-        'disfarcar($boy)',
-      ]);
-    }
-
-  </script>
 </section>
 
 <br /><br />
@@ -341,23 +229,6 @@ layout: mentorship
       </div>
     </div>
   </form>
-
-  <script>
-    function submitExample03(event, targetId) {
-      $textarea = document.querySelector("#" + targetId + " .textarea")
-      $scenario = document.querySelector("#" + targetId + " .scenario")
-
-      submitCode(event, targetId, $scenario, $textarea, [
-        'var $boy01 = pegarElemento("example03_Boy01")',
-        'var codigoBoy01 = pegarCodigo($boy01)',
-        'var codigoAtual = "0001"',
-        'if (codigoBoy01 == codigoAtual) {',
-        'removerDaFila($boy01)',
-        '}',
-      ]);
-    }
-
-  </script>
 </section>
 
 <br />
@@ -405,26 +276,6 @@ layout: mentorship
       </div>
     </div>
   </form>
-
-  <script>
-    function submitExample04(event, targetId) {
-      $textarea = document.querySelector("#" + targetId + " .textarea")
-      $scenario = document.querySelector("#" + targetId + " .scenario")
-
-      submitCode(event, targetId, $scenario, $textarea, [
-        'var $boy01 = fantasia(pegarElemento("example04_Boy01"), "indio");',
-        'var $boy02 = fantasia(pegarElemento("example04_Boy02"), "enfermeiro");',
-        'function fantasiasBloqueadas(usuario) {',
-        'if (usuario.fantasia == "indio") {',
-        'removerDoCarnaval(usuario)',
-        '}',
-        '}',
-        'fantasiasBloqueadas($boy01)',
-        'fantasiasBloqueadas($boy02)',
-      ]);
-    }
-
-  </script>
 </section>
 
 <br /><br />
@@ -588,3 +439,10 @@ layout: mentorship
     </div>
   </article>
 </div>
+
+
+<script src="{{ site.baseurl }}/js/mentorship/logica-de-programaca-com-js/base.js"></script>
+<script src="{{ site.baseurl }}/js/mentorship/logica-de-programaca-com-js/example01.js"></script>
+<script src="{{ site.baseurl }}/js/mentorship/logica-de-programaca-com-js/example02.js"></script>
+<script src="{{ site.baseurl }}/js/mentorship/logica-de-programaca-com-js/example03.js"></script>
+<script src="{{ site.baseurl }}/js/mentorship/logica-de-programaca-com-js/example04.js"></script>
