--- a/mentorship/logica-de-programaca-com-js.html
+++ b/mentorship/logica-de-programaca-com-js.html
@@ -49,13 +49,13 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example01_Girl01" class="is-flex-container to-left">
         <figure class="image is-48x48 is-mirrored">
-          <img src="/images/mentorship/person-female-01.png" />
+          <img src="/images/mentorship/person-female-01.webp" />
         </figure>
       </div>
 
       <div id="example01_Girl02" class="is-flex-container to-right">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-female-03.png" />
+          <img src="/images/mentorship/person-female-03.webp" />
         </figure>
       </div>
     </div>
@@ -90,25 +90,25 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example02_Boy01" class="is-flex-container to-left">
         <figure class="image is-48x48 is-mirrored">
-          <img src="/images/mentorship/person-male-01.png" />
+          <img src="/images/mentorship/person-male-01.webp" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/disfarce-01.png" />
+          <img src="/images/mentorship/disfarce-01.webp" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/disfarce-01.png" />
+          <img src="/images/mentorship/disfarce-01.webp" />
         </figure>
       </div>
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/disfarce-01.png" />
+          <img src="/images/mentorship/disfarce-01.webp" />
         </figure>
       </div>
     </div>
@@ -182,7 +182,7 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example03_Boy01" class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-male-02.png" />
+          <img src="/images/mentorship/person-male-02.webp" />
         </figure>
 
         <pre class="codigo">0001</pre>
@@ -190,7 +190,7 @@ layout: mentorship
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-female-02.png" />
+          <img src="/images/mentorship/person-female-02.webp" />
         </figure>
 
         <pre class="codigo">0002</pre>
@@ -198,7 +198,7 @@ layout: mentorship
 
       <div class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-female-04.png" />
+          <img src="/images/mentorship/person-female-04.webp" />
         </figure>
 
         <pre class="codigo">0003</pre>
@@ -238,13 +238,13 @@ layout: mentorship
     <div class="is-flex-container is-row">
       <div id="example04_Boy01" class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-male-03.png" />
+          <img src="/images/mentorship/person-male-03.webp" />
         </figure>
       </div>
 
       <div id="example04_Boy02" class="is-flex-container to-left">
         <figure class="image is-48x48">
-          <img src="/images/mentorship/person-male-04.png" />
+          <img src="/images/mentorship/person-male-04.webp" />
         </figure>
       </div>
     </div>
