Added descriptions for each example

--- a/mentorship/logica-de-programaca-com-js.html
+++ b/mentorship/logica-de-programaca-com-js.html
@@ -65,6 +65,16 @@ layout: mentorship
   <br />
 
   <form class="form" onsubmit="submitExample01(event, 'example01')">
+    <p>
+      Nesse primeiro exemplo nós precisamos pegar na tela os elementos de ambos os usuários e fazermos com que eles se
+      encontrem.
+
+      Passe o mouse por cima para ver o nome dos usuários para poder vê-los. Você pode seguir o exemplo da primeira
+      linha para poder pegar o segundo usuário. Se atente ao nome utilizado na função.
+    </p>
+
+    <br />
+
     <div class="field">
       <div class="control">
         <textarea class="textarea is-link is-fullwidth" rows="5">
@@ -118,6 +128,13 @@ layout: mentorship
   <br />
 
   <form class="form" onsubmit="submitExample02(event, 'example02')">
+    <p>
+      Agora nesse exemplo, nós precisamos pegar o primeiro usuário que está exposto e disfarçar ele no nosso sistema,
+      use a função de <code>pegarElemento</code> utilizada no exemplo anterior para poder pegar o usuário exposto.
+    </p>
+
+    <br />
+
     <div class="field">
       <div class="control">
         <textarea class="textarea is-link is-fullwidth" rows="3">
@@ -211,6 +228,9 @@ layout: mentorship
 
   <form class="form" onsubmit="submitExample03(event, 'example03')">
     <p>
+      Temos nesse cenário uma fila de atendimento, e o numero atual para o atendimento está na variável
+      <code>codigoAtual</code>.
+
       Adicione na condição uma comparação entre os valores do <code>codigoBoy01</code> e <code>codigoAtual</code>. Você
       pode utilizar tanto o <code>==</code>, quanto o <code>===</code>.
     </p>
@@ -366,7 +386,8 @@ layout: mentorship
 
   <form class="form" onsubmit="submitExample05(event, 'example05')">
     <p>
-      Temos agora vários usuários no nosso sistema, mas precisamos proteger as informações deles. Adicione a condição para o <code>for</code> rodar e disfarçar cada um dos usuários.
+      Temos agora vários usuários no nosso sistema, mas precisamos proteger as informações deles. Adicione a condição
+      para o <code>for</code> rodar e disfarçar cada um dos usuários.
 
       <br />
 
@@ -482,7 +503,8 @@ layout: mentorship
             objeto.keys() // [ "dormindo", "feliz" ]</pre>
 
           E para pegarmos os valores multiníveis nós precisaríamos percorrer o objeto utilizando funções mais complexas.
-          Objetos são ótimos para armazenar valores de forma compreensível para humanos por podermos utilizar palavras para identificar cada item.
+          Objetos são ótimos para armazenar valores de forma compreensível para humanos por podermos utilizar palavras
+          para identificar cada item.
         </p>
       </div>
     </div>
@@ -530,9 +552,11 @@ layout: mentorship
 
   <form class="form" onsubmit="submitExample06(event, 'example06')">
     <p>
-      Outra forma de acessarmos objetos é utilizando <code>[nomeDaPropriedade]</code> como por exemplo: <code>meuObjeto["chave de acesso"]</code>.<br />
+      Outra forma de acessarmos objetos é utilizando <code>[nomeDaPropriedade]</code> como por exemplo:
+      <code>meuObjeto["chave de acesso"]</code>.<br />
 
-      Com isso em mente nós precisamos criar uma função que traduza uma palavra, no exemplo abaixo nós temos já no nosso dicionário <code>Hello</code>, e <code>How are you</code>. Se essa função fosse chamada assim:
+      Com isso em mente nós precisamos criar uma função que traduza uma palavra, no exemplo abaixo nós temos já no nosso
+      dicionário <code>Hello</code>, e <code>How are you</code>. Se essa função fosse chamada assim:
 
       <br />
       <code>traduzir("en", "ola")</code>
@@ -542,7 +566,8 @@ layout: mentorship
 
       <br />
 
-      Para completar esse desafio, você precisará adicionar no objeto <code>dicionario</code> a tradução para o idioma português com  <code>Olá</code> e <code>Como você está</code>.
+      Para completar esse desafio, você precisará adicionar no objeto <code>dicionario</code> a tradução para o idioma
+      português com <code>Olá</code> e <code>Como você está</code>.
 
       <br />
 
