Add reset button

--- a/mentorship/logica-de-programaca-com-js.html
+++ b/mentorship/logica-de-programaca-com-js.html
@@ -69,7 +69,7 @@ layout: mentorship
       Nesse primeiro exemplo nós precisamos pegar na tela os elementos de ambos os usuários e fazermos com que eles se
       encontrem.
 
-      Passe o mouse por cima para ver o nome dos usuários para poder vê-los. Você pode seguir o exemplo da primeira
+      Você poder ver o nome dos usuários passando o mouse por cima das imagens. Você pode seguir o exemplo da primeira
       linha para poder pegar o segundo usuário. Se atente ao nome utilizado na função.
     </p>
 
@@ -87,7 +87,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
@@ -145,7 +145,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
@@ -252,7 +252,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
@@ -309,7 +309,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
@@ -414,7 +414,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
@@ -594,7 +594,7 @@ layout: mentorship
     </div>
 
     <div class="field is-pulled-right">
-      <div class="control">
+      <div class="control is-reverse-row">
         <button class="button" type="submit">Enviar</button>
       </div>
     </div>
